<resources>
    <string name="app_name">Calculadora De Descuento</string>
    <string name="btnIniciar">Iniciar</string>
    <string name="calcular">Calcular</string>
    <string name="textview">TextView</string>
    <string name="precio_del_producto">Precio Del Producto</string>
    <string name="precio_de_producto">Precio De El Producto</string>
    <string name="todo">TODO</string>
    <string name="Descuento">Descuento </string>
    <string name="escribe_tu_descuento">Escribe Tu Descuento</string>
    <string name="precio_de_el_producto">Precio De El Producto</string>
    <string name="descuento">Descuento:</string>
    <string name="_00_00">00.00</string>
    <string name="decuento">Decuento:</string>
    <string name="todo1">TODO1</string>
</resources>