<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculando_Descuento"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtTotal"
        app:layout_constraintTop_toBottomOf="@+id/txtPorcentaje"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/descuento"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escribe_tu_descuento"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProducto" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="107dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/precio_de_el_producto"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtProducto"
        android:layout_width="296dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/precio_de_el_producto"

        android:inputType="textPersonName"
        android:textColor="#2D2F31"
        android:textColorHint="#AAA3A3"
        android:textColorLink="#9C27B0"
        android:textCursorDrawable="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtPorcentaje"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Descuento"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#989797"
        android:textColorLink="#9C27B0"
        android:textCursorDrawable="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/decuento"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorcentaje"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="49dp"
        android:layout_height="24dp"
        android:text="@string/_00_00"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtPorcentaje"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="228dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="#9C27B0"
        android:text="@string/calcular"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/txtProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/dinero"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/txtPorcentaje"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.64"
        app:srcCompat="@drawable/porcentaje" />

</androidx.constraintlayout.widget.ConstraintLayout>